--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@nx-js/compiler-util": "^2.0.0",
     "date-fns": "^1.29.0",
     "lodash": "^4.17.11",
+    "lunr": "^2.3.5",
     "papaparse": "^4.3.7",
     "safe-buffer": "^5.1.2",
     "shortid": "^2.2.8",
