--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: required
 
-travis encrypt "budibase:Nx2QNi9CP87Nn7ah2A4Qdzyy" --add notifications.slack
-
+notifications:
+  slack: budibase:Nx2QNi9CP87Nn7ah2A4Qdzyy
+  
 script: 
 - npm install
 - npm install -g jest
