--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "readable-stream": "^3.1.1",
     "regenerator-runtime": "^0.11.1",
     "rimraf": "^2.6.2",
-    "rollup": "^0.66.6",
-    "rollup-plugin-local-resolve": "^1.0.7"
+    "rollup": "^1.12.0",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-local-resolve": "^1.0.7",
+    "rollup-plugin-node-resolve": "^5.0.0"
   },
   "dependencies": {
     "@nx-js/compiler-util": "^2.0.0",
