--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
-    "presets": ["env"],
+    "presets": ["@babel/preset-env"],
     "sourceMaps": "inline",
-    "retainLines": true
+    "retainLines": true,
+    "plugins": [
+        ["@babel/plugin-transform-runtime",
+          {
+            "regenerator": true
+          }
+        ]
+      ]
 }
