--- a/package.json
+++ b/package.json
@@ -42,14 +42,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "argon2": "^0.20.1",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.4",
-    "jest": "^22.4.3",
+    "jest": "^24.8.0",
     "readable-stream": "^3.1.1",
     "regenerator-runtime": "^0.11.1",
     "rimraf": "^2.6.2",
@@ -59,6 +60,7 @@
     "rollup-plugin-node-resolve": "^5.0.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.5",
     "@nx-js/compiler-util": "^2.0.0",
     "date-fns": "^1.29.0",
     "lodash": "^4.17.11",
