--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "cross-env": "^5.1.4",
+    "eslint": "^5.16.0",
     "jest": "^24.8.0",
     "readable-stream": "^3.1.1",
     "regenerator-runtime": "^0.11.1",
