--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "dependencies": {
     "@babel/runtime": "^7.4.5",
     "@nx-js/compiler-util": "^2.0.0",
+    "babel-eslint": "^10.0.2",
     "date-fns": "^1.29.0",
     "lodash": "^4.17.11",
     "lunr": "^2.3.5",
