--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-local-resolve": "^1.0.7",
-    "rollup-plugin-node-resolve": "^5.0.0"
+    "rollup-plugin-node-resolve": "^5.0.0",
+    "@babel/runtime": "^7.4.5",
+    "babel-eslint": "^10.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.5",
     "@nx-js/compiler-util": "^2.0.0",
-    "babel-eslint": "^10.0.2",
     "date-fns": "^1.29.0",
     "lodash": "^4.17.11",
     "lunr": "^2.3.5",
